PIG-3006: Modernize a chunk of the tests (jcoveney via cheolsoo)
git-svn-id: https://svn.apache.org/repos/asf/pig/trunk@1406469 13f79535-47bb-0310-9956-ffa450edef68